# NVOLib

./: CMakeLists.txt  README.md  codeforces.id  report.md  status.md
nvo/: CMakeLists.txt
nvo/nvolib/: nvolib.cpp
prj.codeforces/: 0016b.cpp  0023b.cpp  0879b.cpp  1330a.cpp  148b.cpp  1696b.cpp  1729b.cpp  1763b.cpp  1811c.cpp  1881b.cpp  1883c.cpp  1899a.cpp  1915a.cpp  1915d.cpp  1916a.cpp  1919a.cpp  CMakeLists.txt
prj.cw/: CMakeLists.txt  data.cpp  gen_vec.cpp
prj.cw/nvolib/: CMakeLists.txt  nvolib.cpp
prj.cw/tester/: CMakeLIsts.txt
stl/: output (2).stl  output (4).stl
