set(CMAKE_CXX_STANDARD 20)

add_executable(0016b 0016b.cpp)
add_executable(0023b 0023b.cpp)
add_executable(0148b 0148b.cpp)
add_executable(0133a 0133a.cpp)
add_executable(1696b 1696b.cpp)
add_executable(1729b 1729b.cpp)
add_executable(1763b 1763b.cpp)
add_executable(1811c 1811c.cpp)
add_executable(1881b 1881b.cpp)
add_executable(1883c 1883c.cpp)
add_executable(1899a 1899a.cpp)
add_executable(1915a 1915a.cpp)
add_executable(1915d 1915d.cpp)
add_executable(1916a 1916a.cpp)
add_executable(1919a 1919a.cpp)
